Fixed: Issue with text overflow and scroll (bug#12970).

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
@@ -374,6 +374,11 @@ form fieldset {
     border: none;
 }
 
+.TableLikeOverflow {
+    overflow: auto;
+    line-height: initial;
+}
+
 fieldset > legend {
     display: block;
     width: 100%;
